# pythongine

./: .gitignore  README.md  attacks.py  bitboard.py  board.py  eval.py  game_replay.py  king_safety.py  main.py  move.py  pgn.py  pieces.py  position.py  pyproject.toml  san.py  search.py
api/: analysis.py  games.py  main.py  play.py
docs/: fen.md
scripts/: import_pgn_games.py  serve_ui.sh
tests/: helpers.py  test_api.py  test_board.py  test_en_passant.py  test_eval.py  test_fen.py  test_game_replay.py  test_king_safety.py  test_make_move.py  test_movegen.py  test_perft.py  test_play.py  test_property.py  test_san.py  test_search.py
tests/assets/games/: 03_en_passant.pgn  04_promotion.pgn  10_morphy_opera.pgn  11_anderssen_immortal.pgn  12_anderssen_evergreen.pgn  13_kasparov_deep_blue.pgn  14_anastasian_lewis.pgn
tests/assets/sources/: anderssen_evergreen_1852.pgn  anderssen_immortal_1851.pgn  kasparov_deep_blue_1997.pgn  morphy_opera_1858.pgn
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  GameOverOverlay.tsx  PlayView.tsx  PromotionDialog.tsx  ReviewView.tsx  api.ts  index.css  main.tsx  playApi.ts  types.ts  useAnalysis.ts
